--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,17 @@ FUTURES_WS_URL=wss://fstream.binance.com
 FUTURES_REST_URL=https://fapi.binance.com
 
 # Symbol universe
-SYMBOLS_FILE=./symbols_topn.txt
-TOP_N=80
+SYMBOLS_FILE=
+TOP_N=25
 USE_ALL_SYMBOLS=false
-SYMBOL_REFRESH_MS=300000
-FREEZE_SYMBOLS=false
+SYMBOL_REFRESH_MS=0
+FREEZE_SYMBOLS=true
 CONTEXT_ENABLE=true
 CONTEXT_SYMBOLS=BTCUSDT,ETHUSDT
 CONTEXT_WINDOWS_MIN=1,5,15
+
+# Collector mode: all | depth | flow
+MODE=all
 
 # Snapshot cadence
 SNAPSHOT_INTERVAL_MS=1000
@@ -21,23 +24,27 @@ LIQ_WINDOWS_SEC=1,5,30,300
 LIQ_DEFAULT_WINDOW_SEC=5
 
 # Streams
-ENABLE_BOOK_TICKER=true
+ENABLE_BOOK_TICKER=false
 ENABLE_DEPTH=true
-DEPTH_LEVEL=5
-DEPTH_SPEED=1000ms
-DEPTH_SNAPSHOT_LIMIT=100
-DEPTH_BUFFER_LIMIT=2000
-DEPTH_SNAPSHOT_CONCURRENCY=4
-DEPTH_RESYNC_COOLDOWN_MS=10000
-DEPTH_SNAPSHOT_SLEEP_MS=50
+
+# Depth: stability-first (avoid mismatches)
+DEPTH_STREAM_MODE=partial
+DEPTH_LEVEL=10                  # balanced depth for stability
+DEPTH_SPEED=500ms               # working stable speed
+DEPTH_SNAPSHOT_LIMIT=500        # deeper snapshot, but not too heavy
+DEPTH_BUFFER_LIMIT=20000        # buffer more updates during snapshot fetch
+DEPTH_SNAPSHOT_CONCURRENCY=2    # reduce pressure; 4 can spike REST + CPU
+DEPTH_RESYNC_COOLDOWN_MS=60000  # avoid resync loops
+DEPTH_SNAPSHOT_SLEEP_MS=150     # reduce REST bursts during initial sync
+
 ENABLE_AGG_TRADES=true
-ENABLE_FORCE_ORDERS=true
+ENABLE_FORCE_ORDERS=false
 FORCE_ORDER_ALL_STREAM=true
 ENABLE_MARK_PRICE=true
 MARK_PRICE_SPEED=1s
-ENABLE_TICKER_STREAM=true
-ENABLE_KLINE_1M=true
-ENABLE_KLINE_5M=true
+ENABLE_TICKER_STREAM=false
+ENABLE_KLINE_1M=false
+ENABLE_KLINE_5M=false
 
 # REST polling (if stream missing/disabled)
 OPEN_INTEREST_POLL_MS=30000
@@ -47,12 +54,18 @@ STATS24H_POLL_MS=60000
 # Logging
 DATA_DIR=./data
 LOG_RAW_EVENTS=true
-MAX_STREAMS_PER_WS=120
+
+# Book ticker
+BOOK_TICKER_ALL_STREAM=true
+
+# WS scaling: keep below overload threshold
+MAX_STREAMS_PER_WS=40           # was 80; fewer streams per WS = fewer drops/mismatches
+
 WRITER_FLUSH_INTERVAL_MS=1000
-WRITER_MAX_BUFFER_LINES=1000
+WRITER_MAX_BUFFER_LINES=2000    # reduce disk flush pressure while staying safe
 WRITER_MAX_OPEN_STREAMS=64
 METRICS_LOG_MS=60000
-STALE_THRESHOLD_MS=15000
+STALE_THRESHOLD_MS=20000        # give a bit more room at scale
 
 # Historical backfill (best defaults)
 BACKFILL_MONTHS=12
@@ -63,7 +76,7 @@ BACKFILL_INTERVALS=1m
 BACKFILL_OPEN_INTEREST_PERIOD=5m
 BACKFILL_MARK_INDEX=true
 BACKFILL_DATA_DIR=./data_backfill
-BACKFILL_SLEEP_MS=250
+BACKFILL_SLEEP_MS=300           # slightly slower = fewer rate issues, more reliable
 BACKFILL_CONCURRENCY=2
 BACKFILL_WRITER_FLUSH_INTERVAL_MS=1000
 BACKFILL_WRITER_MAX_BUFFER_LINES=1000
