fixed the typign in all snapshot rather then only depth

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,7 @@ STATS24H_POLL_MS=60000
 # Logging
 DATA_DIR=./data
 LOG_RAW_EVENTS=true
+WRITE_SNAPSHOTS=true
 
 # Book ticker
 BOOK_TICKER_ALL_STREAM=true
