--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,6 @@ CONTEXT_ENABLE=true
 CONTEXT_SYMBOLS=BTCUSDT,ETHUSDT
 CONTEXT_WINDOWS_MIN=1,5,15
 
-# Collector mode: all | depth | flow
-MODE=all
-
 # Snapshot cadence
 SNAPSHOT_INTERVAL_MS=1000
 
@@ -24,7 +21,7 @@ LIQ_WINDOWS_SEC=1,5,30,300
 LIQ_DEFAULT_WINDOW_SEC=5
 
 # Streams
-ENABLE_BOOK_TICKER=false
+ENABLE_BOOK_TICKER=true
 ENABLE_DEPTH=true
 
 # Depth: stability-first (avoid mismatches)
