adjusted for backfill

--- a/.env.example
+++ b/.env.example
@@ -67,8 +67,8 @@ STALE_THRESHOLD_MS=20000        # give a bit more room at scale
 
 # Historical backfill (best defaults)
 BACKFILL_MONTHS=12
-BACKFILL_TOP_N=80
-BACKFILL_SYMBOLS_FILE=./symbols_topn.txt
+BACKFILL_TOP_N=25
+BACKFILL_SYMBOLS_FILE=
 BACKFILL_USE_ALL_SYMBOLS=false
 BACKFILL_INTERVALS=1m
 BACKFILL_OPEN_INTEREST_PERIOD=5m
